--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-#Listed below are the contributors of this AirBnB_clone project.
+#Listed below are the contributors to this AirBnB_clone project.
 
 Ayooluwa Adedipe <ayooluwaadedipe@gmail.com>
 Obidiegwu Ann <annobidiegwu@gmail.com>
